--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,41 @@
 body {
     background-color: #262a2b;
   }
-  
   h1 {
     color: white;
     text-align: center;
+  }
+  .container{
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    margin: 0 auto;
+  }
+  .header_photo{
+
+  }
+  .header_photo img {
+      border: 0px;
+      border-radius: 50%;
+  }
+  .header_menu{
+    display: flex;
+  }
+
+  .header_nav .name{
+      height: 20%;
+      font-weight: 600;
+      font-size: 1.5em;
+  }
+  .header_nav{
+      display: flex;
+      flex-direction: column;
+  }
+  ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  li{
+    display: list-item;
   }
