--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@ body {
     background-color: #262a2b;
   }
   h1 {
-    color: white;
+    color: #09c2ff;
     text-align: center;
+  }
+  h2 {
+      color:#09c2ff;
   }
   a {
       color: azure;
@@ -12,13 +15,24 @@ body {
   header{
       display: flex;
   }
+  main{
+      display: flex;
+  }
+  article{
+      width: 70%;
+  }
+  aside{
+      width: 30%;
+  }
   .container{
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+    margin-top: 10vh;
   }
   .header_photo{
-
+    width: 30%;
+    text-align: center;
   }
   .header_photo img {
       border: 0px;
@@ -28,7 +42,7 @@ body {
     display: flex;
   }
   .header_nav{
-    width: 100%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,6 +51,7 @@ body {
 
   .header_nav .name{
       font-size: 2.2em;
+      line-height: 1em;
 
   }
   .nav{
@@ -78,12 +93,12 @@ body {
   }
   .line-divider{
     height: 2px;
-    width: 100%;
+    width: 98%;
     margin-bottom: 20px;
     background-color: #ffffff;
   }
   .text-main{
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: azure;
   }
   pre{
