--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,37 @@
 * {
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
+    text-align: justify;
 }
 body {
     background-color: #262a2b;
+    margin: 10px;
+  }
+  footer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    background-color: #ffffff;
+    align-items: center;
+    margin: -10px;
+  }
+  footer div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  footer img{
+    height: 2em;
+  }
+  footer a{
+    color: #262a2b;
+  }
+    footer p {
+    color: #262a2b;
+  }
+  footer div{
+      margin:10px
   }
   h1 {
     color: #09c2ff;
@@ -47,6 +75,8 @@ body {
   .header_photo img {
       border: 0px;
       border-radius: 50%;
+      height: 320px;
+      width: 320px;
   }
   .header_menu{
     display: flex;
@@ -158,4 +188,7 @@ body {
 }
 .ico-telega:before{
     background-image: url('../icons/icons8-telegram-app.svg');
+}
+.bold{
+    font-weight: 600;
 }
