--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body {
     background-color: #262a2b;
     margin: 10px;
   }
+  article{
+      margin:0 4px;
+  }
+  aside{
+      margin:0 4px;
+  }
   footer{
     display: flex;
     flex-direction: row;
@@ -137,8 +143,7 @@ body {
   }
   .line-divider{
     height: 1px;
-    width: 99%;
-    margin-left: 1%;
+    width: 100%;
     margin-bottom: 50px;
     background-color: #ffffff;
   }
