--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body {
   }
   ul{
     display: flex;
+    flex-wrap: wrap;    
     list-style: none;
     margin: 0;
     padding: 0;
@@ -109,7 +110,7 @@ body {
   .header-menu li{
     display: list-item;
     margin-left: 20px;
-    font-size: 20px;
+    font-size: 1.3em;
   }
   .header_menu li a{
       
@@ -211,3 +212,28 @@ article img:hover{
     display: flex;
     width: 100%;
 }
+@media screen and (max-width: 1070px) {
+h1{
+    font-size: 1.5em;
+}
+.header-menu li{
+    display: list-item;
+    font-size: 1em;
+  }
+}
+@media screen and (max-width: 920px) {
+header, .container{
+    flex-direction: column;
+}
+aside, .main{
+    width: 100%;
+}
+.header_nav{
+    width: 100%;
+    align-items: center;
+}
+.header_photo{
+    width: 100%;
+}
+}
+    }
